@@ -32,6 +32,7 @@ importFrom(DOSE,EXTID2TERMID)
 importFrom(DOSE,TERM2NAME)
 importFrom(DOSE,TERMID2EXTID)
 importFrom(DOSE,enrich.internal)
+importFrom(DOSE,setReadable)
 importFrom(GO.db,GOBPANCESTOR)
 importFrom(GO.db,GOBPCHILDREN)
 importFrom(GO.db,GOCCANCESTOR)
@@ -70,7 +71,6 @@ importMethodsFrom(AnnotationDbi,Ontology)
 importMethodsFrom(AnnotationDbi,Term)
 importMethodsFrom(AnnotationDbi,mappedkeys)
 importMethodsFrom(AnnotationDbi,mget)
-importMethodsFrom(DOSE,"setReadable<-")
 importMethodsFrom(DOSE,plot)
 importMethodsFrom(DOSE,show)
 importMethodsFrom(DOSE,summary)
